name: ethereum-data-sql
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
extra-source-files:
               fastNonceFinder/bitfn.h
               fastNonceFinder/sha3.c
               fastNonceFinder/sha3.h
category:      Data Structures
license: BSD3
description:  
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.1

library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , binary
                 , bytestring
                 , unordered-containers
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , either
                 , entropy
                 , ethereum-merkle-patricia-db
                 , ethereum-rlp
                 , filepath
                 , haskoin
                 , leveldb-haskell
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , SHA2
                 , time
                 , transformers
                 , vector
                 , ansi-wl-pprint
                 , persistent
                 , persistent-template
                 , persistent-postgresql
                 , monad-logger
                 , aeson
                 , syb
                 , text
                 , attoparsec
                 , path-pieces
                 , ethereum-encryption
                 , ethereum-util
                 , esqueleto
                 , crypto-pubkey-types
		 
    exposed-modules: 
                   Blockchain.Colors
                   Blockchain.Constants
                   Blockchain.DBM
                   Blockchain.Data.Address
                   Blockchain.Data.DataDefs
                   Blockchain.Data.Code
                   Blockchain.Data.Log
                   Blockchain.Data.Transaction
                   Blockchain.Data.TransactionReceipt
                   Blockchain.DB.CodeDB
                   Blockchain.ExtDBs
                   Blockchain.Data.BlockDB
                   Blockchain.Data.AddressStateDB
                   Blockchain.Data.RawTransaction
                   Blockchain.Data.PersistTypes
                   Blockchain.Data.MiscJSON

    C-sources: fastNonceFinder/nonceFinder.c
    ghc-options: -Wall -O2 -static
    extensions: TemplateHaskell
    buildable: True
    hs-source-dirs: src

